# agent-salon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md
scripts/: test-server.sh
src/: admin.rs  db.rs  http.rs  jsonl.rs  log.rs  main.rs  mcp.rs  metrics.rs
