[package]
name = "relay-mcp"
version = "0.1.0"
edition = "2024"
description = "Lightweight HTTP-to-MCP notification bridge for Claude Code"
license = "MIT"
repository = "https://github.com/m5d215/relay-mcp"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
chrono = "0.4.44"
http = "1"
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
