[package]
name = "agent-salon"
version = "0.4.5"
edition = "2024"
description = "A gathering place for Claude Code sessions — targeted channel-notification messaging between agents, plus an HTTP webhook inbox."
license = "MIT"
repository = "https://github.com/m5d215/agent-salon"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
chrono = "0.4.44"
html-escape = "0.2"
http = "1"
rmcp = { version = "1.5.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
